Add random rescue link on load.

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
       <h3>Oh noes!</h3><br>
       <h3>No moar cats!</h3>
       <br>
-      <h3><a href="http://openkittens.com">You can haz.</a></h3>
+      <h3><a href="http://atmartin.io/openkittens">You can haz.</a></h3>
     </div>
     <div class="video">
       <video loop autoplay>
@@ -19,9 +19,14 @@
       </video>
     </div>
     <div class="footer">
-      Kittens Like Woah
-      <div class="left"></div>
-      <div class="right"></div>
+      <div class="left">
+        Find your very own kitten: 
+        <a href="http://www.catsexclusive.com" id="rescue">Cats Exclusive (Margate, FL)</a>
+      </div>
+      <div class="right">
+        <a href="http://twitter.com/ADotMartin">Made with &hearts; by @ADotMartin</a> | 
+        <a href="http://openpuppies.com">Inspired by OpenPuppies</a>
+      </div>
     </div>
     <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.4/jquery.min.js"></script>
     <script type="text/javascript" src="app.js"></script>
