Add favicon & scaffold for sharing links.

--- a/index.html
+++ b/index.html
@@ -2,15 +2,16 @@
 <html>
   <head>
     <title>OpenKittens</title>
+    <link rel="shortcut icon" href="favicon.ico" type="image/x-icon" >
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/3.0.3/normalize.min.css">
     <link rel="stylesheet" href="style.css">
   </head>
   <body>
     <div class="backer">
-      <h3>Oh noes!</h3><br>
-      <h3>No moar cats!</h3>
+      <h3>Oh noes!</h3>
+      <h3>No moar cats.</h3>
       <br>
-      <h3><a href="http://atmartin.io/openkittens">You can haz.</a></h3>
+      <h3><a href="http://atmartin.io/openkittens">Haz again?</a></h3>
     </div>
     <div class="video">
       <video loop autoplay>
@@ -22,6 +23,10 @@
       <div class="left">
         Find your very own kitten: 
         <a href="http://www.catsexclusive.com" id="rescue">Cats Exclusive (Margate, FL)</a>
+      </div>
+      <div class="center">
+        <a href="#" title="Direct Link"></a>
+        <a href="#" title="Share via Twitter"></a>
       </div>
       <div class="right">
         <a href="http://twitter.com/ADotMartin">Made with &hearts; by @ADotMartin</a> | 
