--- a/index.html
+++ b/index.html
@@ -7,11 +7,32 @@
     <link rel="stylesheet" href="style.css">
   </head>
   <body>
+
+    <svg style="position: absolute; width: 0; height: 0;" width="0" height="0" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
+    <defs>
+    <symbol id="icon-link" viewBox="0 0 1024 1024">
+      <title>link</title>
+        <path class="path1" d="M440.236 635.766c-13.31 0-26.616-5.076-36.77-15.23-95.134-95.136-95.134-249.934 0-345.070l192-192c46.088-46.086 107.36-71.466 172.534-71.466s126.448 25.38 172.536 71.464c95.132 95.136 95.132 249.934 0 345.070l-87.766 87.766c-20.308 20.308-53.23 20.308-73.54 0-20.306-20.306-20.306-53.232 0-73.54l87.766-87.766c54.584-54.586 54.584-143.404 0-197.99-26.442-26.442-61.6-41.004-98.996-41.004s-72.552 14.562-98.996 41.006l-192 191.998c-54.586 54.586-54.586 143.406 0 197.992 20.308 20.306 20.306 53.232 0 73.54-10.15 10.152-23.462 15.23-36.768 15.23z"></path>
+          <path class="path2" d="M256 1012c-65.176 0-126.45-25.38-172.534-71.464-95.134-95.136-95.134-249.934 0-345.070l87.764-87.764c20.308-20.306 53.234-20.306 73.54 0 20.308 20.306 20.308 53.232 0 73.54l-87.764 87.764c-54.586 54.586-54.586 143.406 0 197.992 26.44 26.44 61.598 41.002 98.994 41.002s72.552-14.562 98.998-41.006l192-191.998c54.584-54.586 54.584-143.406 0-197.992-20.308-20.308-20.306-53.232 0-73.54 20.306-20.306 53.232-20.306 73.54 0.002 95.132 95.134 95.132 249.932 0.002 345.068l-192.002 192c-46.090 46.088-107.364 71.466-172.538 71.466z"></path>
+          </symbol>
+          <symbol id="icon-twitter" viewBox="0 0 1024 1024">
+            <title>twitter</title>
+              <path class="path1" d="M1024 194.418c-37.676 16.708-78.164 28.002-120.66 33.080 43.372-26 76.686-67.17 92.372-116.23-40.596 24.078-85.556 41.56-133.41 50.98-38.32-40.83-92.922-66.34-153.346-66.34-116.022 0-210.088 94.058-210.088 210.078 0 16.466 1.858 32.5 5.44 47.878-174.6-8.764-329.402-92.4-433.018-219.506-18.084 31.028-28.446 67.116-28.446 105.618 0 72.888 37.088 137.192 93.46 174.866-34.438-1.092-66.832-10.542-95.154-26.278-0.020 0.876-0.020 1.756-0.020 2.642 0 101.788 72.418 186.696 168.522 206-17.626 4.8-36.188 7.372-55.348 7.372-13.538 0-26.698-1.32-39.528-3.772 26.736 83.46 104.32 144.206 196.252 145.896-71.9 56.35-162.486 89.934-260.916 89.934-16.958 0-33.68-0.994-50.116-2.94 92.972 59.61 203.402 94.394 322.042 94.394 386.422 0 597.736-320.124 597.736-597.744 0-9.108-0.206-18.168-0.61-27.18 41.056-29.62 76.672-66.62 104.836-108.748z"></path>
+              </symbol>
+              <symbol id="icon-info" viewBox="0 0 1024 1024">
+                <title>info</title>
+                  <path class="path1" d="M448 304c0-26.4 21.6-48 48-48h32c26.4 0 48 21.6 48 48v32c0 26.4-21.6 48-48 48h-32c-26.4 0-48-21.6-48-48v-32z"></path>
+                    <path class="path2" d="M640 768h-256v-64h64v-192h-64v-64h192v256h64z"></path>
+                      <path class="path3" d="M512 0c-282.77 0-512 229.23-512 512s229.23 512 512 512 512-229.23 512-512-229.23-512-512-512zM512 928c-229.75 0-416-186.25-416-416s186.25-416 416-416 416 186.25 416 416-186.25 416-416 416z"></path>
+                      </symbol>
+              </defs>
+              </svg>
+
     <div class="backer">
       <h3>Oh noes!</h3>
       <h3>No moar cats.</h3>
       <br>
-      <h3><a href="http://atmartin.io/openkittens">Haz again?</a></h3>
+      <h3><a href="http://openkittens.com">Haz again?</a></h3>
     </div>
     <div class="video">
       <video loop autoplay>
@@ -25,8 +46,21 @@
         <a href="http://www.catsexclusive.com" id="rescue">Cats Exclusive (Margate, FL)</a>
       </div>
       <div class="center">
-        <a href="#" title="Direct Link"></a>
-        <a href="#" title="Share via Twitter"></a>
+        <a id="info" href="https://github.com/ATMartin/openkittens/blob/master/README.md" title="What Is This?" target="_blank">
+          <svg class="icon">
+            <use xlink:href="#icon-info"></use>
+          </svg>
+        </a>
+        <a id="direct" href="#" title="Direct Link" target="_blank">
+          <svg class="icon">
+            <use xlink:href="#icon-link"></use>
+          </svg>
+        </a>
+        <a id="tweet" href="#" title="Share via Twitter" target="_blank">
+          <svg class="icon">
+            <use xlink:href="#icon-twitter"></use>
+          </svg>
+          </a>
       </div>
       <div class="right">
         <a href="http://twitter.com/ADotMartin">Made with &hearts; by @ADotMartin</a> | 
