--- a/index.html
+++ b/index.html
@@ -5,6 +5,14 @@
     <link rel="shortcut icon" href="favicon.ico" type="image/x-icon" >
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/3.0.3/normalize.min.css">
     <link rel="stylesheet" href="style.css">
+    <script>
+        (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+          (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+          m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+        })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+        ga('create', 'UA-66641335-1', 'auto');
+        ga('send', 'pageview');
+    </script>
   </head>
   <body>
 
@@ -33,6 +41,9 @@
       <h3>No moar cats.</h3>
       <br>
       <h3><a href="http://openkittens.com">Haz again?</a></h3>
+    </div>
+    <div class="fallback">
+      <img src="#" title="Cat picture for mobile">
     </div>
     <div class="video">
       <video loop autoplay>
