Add mobile menu.

--- a/index.html
+++ b/index.html
@@ -53,6 +53,7 @@
       </video>
     </div>
     <div class="footer">
+      <div class="footer-toggle">| | |</div>
       <div class="left">
         Find your very own kitten: 
         <a href="http://www.catsexclusive.com" id="rescue">Cats Exclusive (Margate, FL)</a>
